--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
+  "name": "unit10hw",
+  "version": "1.0.0",
+  "description": "OOP and testing for week 10 homework",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest --verbose test/*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+  },
+  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "devDependencies": {
     "jest": "^27.1.1"
   },
   "dependencies": {
+    "html-prettify": "^1.0.3",
     "inquirer": "^8.1.2"
   }
 }
